Added LaTeX examples with syntax. Kinda confusing but if used with the cheat sheet on the website, everything should work.

--- a/JuliaFile/FinalProject.ipynb
+++ b/JuliaFile/FinalProject.ipynb
@@ -37,27 +37,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "LoadError: syntax: \"\\\" is not a unary operator\nwhile loading In[19], in expression starting on line 3",
-     "output_type": "error",
-     "traceback": [
-      "LoadError: syntax: \"\\\" is not a unary operator\nwhile loading In[19], in expression starting on line 3",
-      ""
-     ]
-    }
-   ],
    "source": [
-    "using LaTeXStrings \n",
+    "Hello my variable name is $x$.\n",
+    "$$\n",
+    "x=\\frac{-b\\pm\\sqrt{b^2-4ac}}{2a}\n",
+    "$$\n",
     "\n",
-    "\\[x=\\frac{-b\\pm\\sqrt{b^2-4ac}}{2a}\\]"
+    "\\begin{align}\n",
+    "\\underset{x \\in \\mathbb{R^n}}{\\text{maximize}}\\qquad& f_0(x) \\\\\n",
+    "\\text{subject to:}\\qquad& f_i(x) \\le 0 && i=1,\\dots,m\\\\\n",
+    "& h_j(x) = 0 && j=1,\\dots,r\n",
+    "\\end{align}"
    ]
   },
   {
